# love-strategist

./: .claudeignore  .gitignore  CLAUDE.md  LoveStrategist.spec  README.md  help.html  pyproject.toml  requirements.txt
code/: README.md  pyproject.toml
code/config/: config.yaml.template
code/src/: main.py
code/src/models/: contact.py  profile.py
code/src/services/: profile_service.py  update_checker.py  web_search.py
code/src/skills/: __init__.py  base.py
code/src/skills/builtin/: affinity_estimator.py  profile_analyzer.py  sentiment_analyzer.py  topic_suggester.py
code/src/storage/: contact_dao.py  database.py
code/src/ui/: chat_area.py  contact_detail.py  contact_manage_list.py  input_panel.py  main_window.py  navigation_bar.py  settings_detail.py  settings_list.py  title_bar.py
code/src/ui/widgets/: affinity_bar.py  avatar_widget.py  base_dialog.py  crop_dialog.py
code/src/utils/: logger.py  thread_utils.py
config/: config.yaml.template
docs/: PyQt5 应用 PyInstaller 打包经验.md  Token优化方案.md  todo.txt  ui布局参考.md  初始用户需求.txt  回复风格控制.md  开发注意事项.md  开发计划书.md  整体架构分层.md
docs/summaries/: 2026-06-27-开发总结.md
scripts/: clean_temp.py  fix_avatars.py
src/: __init__.py  main.py
src/controllers/: __init__.py  chat_controller.py
src/models/: __init__.py  enums.py  message.py
src/services/: __init__.py  context_summarizer.py  llm_service.py  update_checker.py
src/skills/: manager.py
src/storage/: __init__.py  message_dao.py  profile_dao.py
src/ui/: __init__.py  chat_area.py  chat_contact_list.py  styles.py  (+6 more)
tests/: test_skills.py  test_storage.py
(+6 files in other folders)
