[project]
name = "love-strategist"
version = "0.1.0"
description = "聊天辅助工具 - 基于大模型的高情商回复建议"
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
